General : fix several quality and efficiency issues