@@ -40,7 +40,7 @@ public class GetZFunction extends AbstractFunction {
               throw new IllegalArgumentException("Filter Function problem for function getZ argument #0 - expected type Geometry");
         }
 
-        return new Double(arg0.getCentroid().getCoordinate().z);
+        return Double.valueOf(arg0.getCentroid().getCoordinate().z);
 
     }
 }
